# joinery3d

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy-web.yml  release.yml
.husky/: pre-commit
scripts/: check-schema-sync.sh
src/: app.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: AssetInstance.ts  AssetInstanceId.ts  Part.ts  PartId.ts  Scale.ts  SlotAssignment.ts  SlotDefinition.ts  SlotTag.ts  Template.ts  TemplateId.ts  Texture.ts  TextureChannel.ts  TextureId.ts  TextureSlot.ts  Transform.ts
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/schema/: ids.rs  instance.rs  mod.rs  part.rs  template.rs  texture.rs  vec.rs
src-tauri/tests/: schema_roundtrip.rs
src/core/: assembly.test.ts  assembly.ts  canvas-painter.test.ts  canvas-painter.ts  color-quantize.test.ts  color-quantize.ts  create-instance.test.ts  create-instance.ts  create-template.test.ts  create-template.ts  hex-to-color.test.ts  hex-to-color.ts  history.test.ts  history.ts  library-index.test.ts  library-index.ts  migrate-project.test.ts  migrate-project.ts  recent-projects.test.ts  recent-projects.ts  slots.test.ts  slots.ts  transforms.test.ts  transforms.ts
src/integration/: build-chest.test.ts  build-humanoid.test.ts  feature-wiring.test.ts
src/schema/: ids.test.ts  ids.ts  instance.test.ts  instance.ts  library.test.ts  library.ts  part.test.ts  part.ts  template.test.ts  template.ts  (+6 more)
(+253 files in other folders)
